Update Rsyslog Local Logging

--- a/core/roles/rsyslog/templates/etc/rsyslog.d/11-local.conf.j2
+++ b/core/roles/rsyslog/templates/etc/rsyslog.d/11-local.conf.j2
@@ -1,5 +1,5 @@
 # rsyslog configuration file
 # This file is managed by Ansible
 
-# Log all WARN and higher to disk
-*.warn -/var/log/messages
+# Log messages locally
+{{ '# ' if not rsyslog_local_file else '' }}*.{{ rsyslog_local_level|default('*') }} {{ rsyslog_local_file|default(/var/log/messages) }}
