--- a/core/roles/rsyslog/templates/etc/rsyslog.d/11-local.conf.j2
+++ b/core/roles/rsyslog/templates/etc/rsyslog.d/11-local.conf.j2
@@ -2,4 +2,4 @@
 # This file is managed by Ansible
 
 # Log messages locally
-{{ '# ' if not rsyslog_local_file else '' }}*.{{ rsyslog_local_level|default('*') }} {{ rsyslog_local_file|default(/var/log/messages) }}
+{{ '# ' if not rsyslog_local_file else '' }}*.{{ rsyslog_local_level|default('*') }} {{ rsyslog_local_file|default('/var/log/messages') }}
