Ensure Restic scripts run under bash (Debian issue)

--- a/core/roles/baseline/templates/40-restic-default.j2
+++ b/core/roles/baseline/templates/40-restic-default.j2
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 # Restic Default Backup Script
 # ----------------------------------------
 # This file is managed by Ansible
