--- a/core/roles/baseline/templates/70-restic-prune-default.j2
+++ b/core/roles/baseline/templates/70-restic-prune-default.j2
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 # Restic Default Prune Script
 # ----------------------------------------
 # This file is managed by Ansible
