Add an insecure SSL server transport option

--- a/docker/roles/traefik/templates/traefik.yml.j2
+++ b/docker/roles/traefik/templates/traefik.yml.j2
@@ -29,6 +29,12 @@ log:
 pilot:
   dashboard: false
 
+# Skip Certificate Checks on HTTPS backends
+http:
+  serversTransport:
+    noCertCheck:
+      insecureSkipVerify: true
+
 {% if traefik_access_log|default({}) %}
 # Access Logging
 accessLog:
