feat: [asymworks.docker.traefik] provide flag to enable Traefik API/Dashboard

--- a/docker/roles/traefik/templates/traefik.yml.j2
+++ b/docker/roles/traefik/templates/traefik.yml.j2
@@ -25,9 +25,11 @@ providers:
 log:
   level: {{ traefik_log_level }}
 
-# Disable Pilot
-pilot:
-  dashboard: false
+{% if traefik_enable_api | default(false) -%}
+# Enable the API and Dashboard
+api:
+  dashboard: true
+{%- endif %}
 
 # Skip Certificate Checks on HTTPS backends
 http:
