feat: [asymworks.docker.traefik] provide flag to enable Traefik API/Dashboard

--- a/docker/roles/traefik/templates/traefik.yml.j2
+++ b/docker/roles/traefik/templates/traefik.yml.j2
@@ -29,8 +29,8 @@ log:
 # Enable the API and Dashboard
 api:
   dashboard: true
-{%- endif %}
 
+{% endif -%}
 # Skip Certificate Checks on HTTPS backends
 http:
   serversTransport:
